fix(Transfer): z-index conflict with TopBar selects

--- a/src/components/Wallet/Transfer/Transfer.scss
+++ b/src/components/Wallet/Transfer/Transfer.scss
@@ -44,7 +44,7 @@
     }
 
     .overlay {
-        z-index: 98;
+        z-index: 49;
         position: absolute;
         top: 0;
         bottom: 0;
